# RoboFab_2025Fall

./: .gitignore  LICENSE  README.md  pyproject.toml
course/lecture2/: hello_franka.py  imgui.ini
course/lecture3/: .polyscope.ini  dual_franka.py  imgui.ini
course/lecture4/: fk.py  imgui.ini  simple_robot.py  simple_robot_fk.py
data/robot/franka/: fr3_franka_0.urdf  fr3_franka_0.yml  fr3_franka_1.urdf  fr3_franka_1.yml
data/robot/franka/spheres/: franka_fr3.yml  franka_fr3_before.yml
data/robot/simple_robot/: simple_robot.urdf
src/robofab/: __init__.py  render.py  robot.py
