[project]
name = "robofab"
version = "0.0.1"
authors = [
  { name="Ziqi Wang", email="ziqiw@ust.hk" },
]
dependencies = [
    "pytest >= 8.3.0",
    "trimesh >= 4.6.4",
    "scipy >= 1.15.2",
    "usd-core >= 25.2",
    "polyscope >= 2.3.0",
    "hatchling >= 1.27.0",
    "pytorch-kinematics >= 0.7.5",
    "pycollada >= 0.9"
]

description = "A package for conducting research using robots for assembly"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/kiki007/robofab"
Issues = "https://github.com/kiki007/robofab/issues"